20080205 ui/win32/picture.{c,rc}: Win32: fix for keyboard help dialog (Marek).
20080206 configure.in,sound/Makefile.am: Win32: make autotools recognize and
	 use Windows Multimedia API header (mmsystem.h) (Marek).
20080208 ui/win32/win32ui.c: Win32: machine select dialog, minor code
	 formatting changes (Marek).
20080209 ui/win32/{debugger.c,error.c,picture.c,pokefinder.c,win32display.c,
	 win32internals.h,win32keyboard.h,win32ui.c}: formatting fixes (Stuart).
20080209 ui/win32/debugger.rc: Win32: include resource definitions from
	 debugger.h (Stuart).
20080209 sound/aosound.c,ui/win32/{debugger.h,win32ui.c}: replace C99-style
	 '// ...' comments with '/* ... */' comments (Stuart).
20080210 windres.rc,ui/win32/{win32ui.c,machine_select.{h,rc}}: Win32:
	 make Machine Select dialog a modal one (Marek).
20080212 windres.rc,ui/win32/{win32ui.c,options-resource.pl,options-header.pl,
	 options.pl,Makefile.am}: Win32: fix for the 'options' dialogs (Marek).
20080213 windres.rc,ui/win32/{win32ui.c,machine_select.{h,rc},
	 select_template.{h,rc}}: Win32: simplification of the Select Machine
	 dialog (Marek).
20080215 ui/win32/win32ui.c: Win32: implementation of the Filters dialog using a
	 reusable selector_dialog (Marek).
20080217 ui/win32/{win32ui.c,pokefinder.{c,rc},win32internals.h,Makefile.am}:
	 Win32: fixes for pokefinder (Marek).
20080220 ui/win32/{win32ui.c,debugger.{c,h,rc},win32internals.h}: Win32: Partial
	 implementation of the debugger window (Marek).
20080221 ui/win32/{debugger.{c,h,rc}}: Win32: implementation of disassembly pane
	 in the debugger window (Marek).
20080227 disk/disk.c: disk 'log' formatting fixes (part of patch #1894441)
         (Gergely Szasz).
20080227 disk/disk.c: auto disk density selection fix (part of patch #1894441)
         (Gergely Szasz).
20080227 disk/disk.c: track length calculation fixes (include gap lengths and
         use sector headers rather than file header lengths (part of patch
         #1894441) (Gergely Szasz).